--- a/templates/inputForm.html
+++ b/templates/inputForm.html
@@ -8,11 +8,14 @@
 	<body>
 			
         <div id="inputFormContainer">
-            <form method="POST"  action="/">
+            <form method="POST"  action="/launcher/app-user/computations">
+                <label for="ctName">Computation Task name</label><br />
+                <input type="text" name="ctName"><br />
                 {% for entry in entryList %}
                     <label for="name">{{entry.name}}</label><br />
                     <input type="text" name="{{entry.name}}" value="{{entry.defaultValue}}"><br />
                 {% endfor %}
+                <input type="hidden" name=hiddenAppID value="{{appID}}">
                 <input type="submit" id="formSubmit" value="Create Computation Task">
         
             </form>
