Project files moved to new folders. Project more is more Dockerfile friendly now.

--- a/launcher/src/templates/appDetails.html
+++ b/launcher/src/templates/appDetails.html
@@ -20,7 +20,7 @@
 				<br /><br />
 				Description: {{appDescription}}
 				<br /><br />
-				<a href="/launcher/app-user/{{appID}}/createComputationTask"><button type="button">Create Computation Task</button></a>
+				<a href="/launcher/app-user/{{appID}}/createComputationTask"><button type="button">Create CT</button></a>
 			</div>
 		</div>
 	</div>
