--- a/launcher/src/templates/appDetails.html
+++ b/launcher/src/templates/appDetails.html
@@ -2,11 +2,17 @@
 
 <html lang="pl-PL">
 <head>
+<link rel="stylesheet" href="../static/main.css" type="text/css"/>
 <meta charset="UTF-8">
 <title>App details</title>
 </head>
 <body>
 <div id="container">
+		<header>
+				<div id="headContainer">
+					
+				</div>
+		</header>
 	<div id="app_details">
 		<div class="app_name">
 			<h2>{{appName}}</h2>
@@ -20,7 +26,7 @@
 				<br /><br />
 				Description: {{appDescription}}
 				<br /><br />
-				<a href="/launcher/app-user/{{appID}}/createComputationTask"><button type="button">Create CT</button></a>
+				<a href="/launcher/app-user/{{appID}}/createComputationTask"><button type="button" class="myButton">Create CT</button></a>
 			</div>
 		</div>
 	</div>
