--- a/launcher/src/templates/appDetails.html
+++ b/launcher/src/templates/appDetails.html
@@ -2,16 +2,20 @@
 
 <html lang="pl-PL">
 <head>
-<link rel="stylesheet" href="../static/main.css" type="text/css"/>
+<link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" type="text/css"/>
 <meta charset="UTF-8">
 <title>App details</title>
 </head>
 <body>
 <div id="container">
 		<header>
-				<div id="headContainer">
-					
-				</div>
+            <div id="headContainer">
+			    <nav>
+				    <ul>
+                        <li>_user01_</li>
+				    </ul>
+			    </nav>
+		    </div>
 		</header>
 	<div id="app_details">
 		<div class="app_name">
