--- a/launcher/src/static/main.css
+++ b/launcher/src/static/main.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
+
+
 body {
 	margin: 0px;
 	background: #ffffff;
@@ -5,6 +8,72 @@ body {
   font-weight: 800;
 }
 
+#headContainer {
+    width: 90%;
+    margin: 0 auto;
+}
+
+header {
+    background: #1c6835;
+    position: fixed;
+    top: 0%;
+    width: 100%;
+    z-index: 10;
+}
+
+header::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+nav {
+    float: right;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav li {
+    margin-top: 45px;
+    display: inline-block;
+    margin-left: 90px;
+    position: relative;
+    padding-bottom: 10px;
+
+}
+
+nav a {
+    font-size: 18px;
+    text-decoration: none;
+    color: #ffffff;
+}
+
+nav a::before {
+    content: '';
+    display: block;
+    height: 3px;
+    background-color: #ffffff;
+    position: absolute;
+    bottom: 0;
+    width: 0%;
+    transition: all ease-in-out 250ms;
+}
+
+nav a:hover::before {
+    width: 100%;
+}
+
+#content {
+  width:100%;
+  position: relative;
+  margin: 1000px auto;
+  margin-bottom: 0px;
+  background: #f2f2f2;
+}
 
 #app_details {
     margin: auto;
