--- a/launcher/src/templates/inputForm.html
+++ b/launcher/src/templates/inputForm.html
@@ -15,6 +15,8 @@
                     <label for="name">{{entry.name}}</label><br />
                     <input type="text" name="{{entry.name}}" value="{{entry.defaultValue}}"><br />
                 {% endfor %}
+                <label for="logger">Logger</label><br />
+                <input type="text" name="logger"><br />
                 <input type="hidden" name=hiddenAppID value="{{appID}}">
                 <input type="submit" id="formSubmit" value="Create">
             <br />
