--- a/launcher/src/templates/appDetails.html
+++ b/launcher/src/templates/appDetails.html
@@ -7,16 +7,17 @@
 <title>App details</title>
 </head>
 <body>
+	<header>
+		<div id="headContainer">
+			<h3 id="userName">Logged in as: user01</h3>
+			<nav>
+				<ul>
+					<li><a href="/logout">Logout</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
 <div id="container">
-		<header>
-            <div id="headContainer">
-			    <nav>
-				    <ul>
-                        <li>_user01_</li>
-				    </ul>
-			    </nav>
-		    </div>
-		</header>
 	<div id="app_details">
 		<div class="app_name">
 			<h2>{{appName}}</h2>
