--- a/launcher/src/static/main.css
+++ b/launcher/src/static/main.css
@@ -19,6 +19,7 @@ header {
     top: 0%;
     width: 100%;
     z-index: 10;
+    padding-bottom: 20px;
 }
 
 header::after {
@@ -30,6 +31,18 @@ header::after {
 nav {
     float: right;
 }
+
+#userName {
+    font-size: 18px;
+    text-decoration: none;
+    color: #ffffff;
+
+    margin-top: 45px;
+    display: inline-block;
+    margin-left: 90px;
+    position: relative;
+    padding-bottom: 10px;
+  }
 
 nav ul {
     list-style: none;
@@ -107,7 +120,7 @@ nav a:hover::before {
     height: 200px;
     margin-right: 5%;
     margin-top: 40px;
-    background-color: #368851;
+    background-color: #cecece;
 }
 
 .appIconPic {
@@ -129,3 +142,80 @@ nav a:hover::before {
 .myButton:hover {
     background-color: #368851;
   }
+
+  #messageContainer {
+    margin-top: 10%;
+    padding-top: 10%;
+    padding-bottom: 12%;
+    text-align: center;
+  }
+
+  #messageButton {
+    background-color: #1c6835;
+    color: white;
+    padding: 22px 40px;
+    font-size: 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 20px;
+  }
+  
+  #messageButton:hover {
+    background-color: #368851;
+  }
+
+  #formContainer {
+
+    background-color: #f2f2f2;
+    padding-left: 35%;
+    margin-top: 8%;
+    padding-top: 6%;
+    padding-bottom: 5%;
+  }
+
+input[type=text],
+select,
+textarea {
+    width: 50%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 5px;
+    resize: vertical
+}
+
+
+input[type=submit] {
+    background-color: #1c6835;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 2%;
+    margin-left: 17%;
+    margin-bottom: 30px;
+}
+
+
+input[type=submit]:hover {
+    background-color: #368851;
+}
+
+.formCancelButton {
+    background-color: #1c6835;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 17%;
+    margin-bottom: 30px;
+}
+
+.formCancelButton:hover {
+    background-color: #368851;
+}
