--- a/launcher/src/templates/message.html
+++ b/launcher/src/templates/message.html
@@ -2,11 +2,24 @@
 
 <html lang="pl-PL">
 <head>
+<link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" type="text/css"/>
 <meta charset="utf-8" />
 <title>CT Create Status</title>
 </head>
 	<body>
-		<h2>{{message}}</h2>
-        <a href="/" > <button type="button">OK</button></a>
+        <header>
+            <div id="headContainer">
+                <h3 id="userName">Logged in as: user01</h3>
+                    <nav>
+                        <ul>
+                            <li><a href="/logout">Logout</a></li>
+                        </ul>
+                    </nav>
+            </div>
+        </header>
+        <div id="messageContainer">
+            <h2>{{message}}</h2>
+            <a href="/"><button type="button" id="messageButton">OK</button></a>
+        </div>   
     </body>
 </html>
