--- a/launcher/src/static/main.css
+++ b/launcher/src/static/main.css
@@ -88,21 +88,30 @@ nav a:hover::before {
   background: #f2f2f2;
 }
 
-#app_details {
+#app_details, #ct_details {
     margin: auto;
     margin-top: 200px;
     width: 90%;
 }
 
-.app_name {
+.app_name, .ct_name {
     height: 10%;
     font-size: 30px;
 }
 
-.app_view {
+.app_view, .ct_view {
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 10%;
+}
+
+.ct_properties {
+  margin-top: 5%;
+  margin-left: 30%;
+}
+
+.ctInputData {
+  margin-left: 10%;
 }
 
 .app_properties {
