--- a/launcher/src/templates/question.html
+++ b/launcher/src/templates/question.html
@@ -19,7 +19,8 @@
         </header>
         <div id="messageContainer">
             <h2>{{message}}</h2>
-            <a href={{ link }}><button type="button" id="messageButton">OK</button></a>
-        </div>   
+            <a href={{ link_yes }}><button type="button" id="messageButton">YES</button></a>
+            <a href={{ link_no }}><button type="button" id="messageButton">NO</button></a>
+        </div>
     </body>
 </html>
