--- a/launcher/src/templates/cockpit.html
+++ b/launcher/src/templates/cockpit.html
@@ -2,8 +2,8 @@
 
 <html lang="pl-PL">
 <head>
-<!-- <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" type="text/css"/> -->
-<link rel="stylesheet" href="../static/main.css" type="text/css"/>
+<link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" type="text/css"/>
+<!-- <link rel="stylesheet" href="../static/main.css" type="text/css"/> -->
 <meta charset="utf-8" />
 <title>CT Input</title>
 </head>
