--- a/launcher/src/templates/cockpit.html
+++ b/launcher/src/templates/cockpit.html
@@ -42,11 +42,31 @@
 
             <!-- Jest to ultra niebezpieczne ale prowadzący mówił że to nie ochrona danych -->
             <div class="cockpit_content">
+                <h1 class="sectionName">Applications</h1>
+                <div class="innerScroll">
+                    <ul class="ct_list">
+                        <li class="ctListElem"><a href=""><span class="ctListElemName">App 1</span></a><div class="ctListButtons"><a href=""><button class="ctActivateBtn">Create CT</button></a></div></li>
+                        <li class="ctListElem"><a href=""><span class="ctListElemName">App 2</span></a><div class="ctListButtons"><a href=""><button class="ctActivateBtn">Create CT</button></a></div></li>
+                        <li class="ctListElem"><a href=""><span class="ctListElemName">App 3</span></a><div class="ctListButtons"><a href=""><button class="ctActivateBtn">Create CT</button></a></div></li>
+                        <li class="ctListElem"><a href=""><span class="ctListElemName">App 4</span></a><div class="ctListButtons"><a href=""><button class="ctActivateBtn">Create CT</button></a></div></li>
+                        <li class="ctListElem"><a href=""><span class="ctListElemName">App 5</span></a><div class="ctListButtons"><a href=""><button class="ctActivateBtn">Create CT</button></a></div></li>
+                        <li class="ctListElem"><a href=""><span class="ctListElemName">App 6</span></a><div class="ctListButtons"><a href=""><button class="ctActivateBtn">Create CT</button></a></div></li>
+                    </ul>
+                </div>
+                <!-- Chwilowo sam front więc korzystanie z logiki zakomentowane -->
+                <!-- <h1 class="sectionName">Applications</h1>
+                <div class="innerScroll">
+                    <ul class="ct_list">
+                        {% for app in appList %}
+                            <li class="ctListElem"><a href="/launcher/app-user/application/{{app.id}}"><span class="ctListElemName">{{app.name}}</span></a><div class="ctListButtons"><a href="/launcher/app-user/{{app.id}}/createComputationTask"><button class="ctActivateBtn">Create CT</button></a></div></li>
+                        {% endfor %}
+                    </ul>
+                </div> -->
                 <h1 class="sectionName">Computation Tasks</h1>
                 <div class="innerScroll">
                     <ul class="ct_list">
                         {% for ct in ctList %}
-                            <li class="ctListElem"><span class="ctListElemName">{{ct.name}}</span><div class="ctListButtons"><a href="/launcher/app-user/ctOverview/activate/{{ct.id}}"><button class="ctActivateBtn">Activate</button></a><a href="/launcher/app-user/ctOverview/pause/{{ct.id}}"><button class="ctPauseBtn">Pause</button></a><a href="/launcher/app-user/ctOverview/abort/{{ct.id}}"><button class="ctAbortBtn">Abort</button></a></div></li>
+                            <li class="ctListElem"><span class="ctListElemName">{{ct.name}}</span><span class="ctListElemAppName">AppName</span><span class="ctListElemStatus">CTStatus</span><div class="ctListButtons"><a href="/launcher/app-user/ctOverview/activate/{{ct.id}}"><button class="ctActivateBtn">Activate</button></a><a href="/launcher/app-user/ctOverview/pause/{{ct.id}}"><button class="ctPauseBtn">Pause</button></a><a href="/launcher/app-user/ctOverview/abort/{{ct.id}}"><button class="ctAbortBtn">Abort</button></a></div></li>
                         {% endfor %}
                     </ul>
                 </div>
