Cockpit is working (almost).

--- a/launcher/src/templates/computationDetails.html
+++ b/launcher/src/templates/computationDetails.html
@@ -19,8 +19,8 @@
         </header>
         <div id="messageContainer">
             <h2>{{message}}</h2>
-            <a href="/"><button type="button" id="messageButton">YES</button></a>
-            <a href="/"><button type="button" id="messageButton">NO</button></a>
+            <a href="/launcher"><button type="button" id="messageButton">YES</button></a>
+            <a href="/launcher"><button type="button" id="messageButton">NO</button></a>
         </div>
     </body>
 </html>
