--- a/launcher/src/templates/cockpit.html
+++ b/launcher/src/templates/cockpit.html
@@ -4,6 +4,7 @@
 <head>
 <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" type="text/css"/>
 <!-- <link rel="stylesheet" href="../static/main.css" type="text/css"/> -->
+    <script src="{{ url_for('static', filename='cockpit.js') }}" type="text/javascript"></script>
 <meta charset="utf-8" />
 <title>CT Input</title>
 </head>
@@ -54,14 +55,25 @@
                 <div class="innerScroll">
                     <ul class="ct_list">
                         {% for ct in ctList %}
-                            <li class="ctListElem"><span class="ctListElemName">{{ct.name}}</span><span class="ctListElemAppName">{{ ct.application.name }}</span><span class="ctListElemStatus">CTStatus</span><div class="ctListButtons"><a href="/launcher/app-user/ctOverview/activate/{{ct.id}}"><button class="ctActivateBtn">Activate</button></a><a href="/launcher/app-user/ctOverview/pause/{{ct.id}}"><button class="ctPauseBtn">Pause</button></a><a href="/launcher/app-user/ctOverview/abort/{{ct.id}}"><button class="ctAbortBtn">Abort</button></a>
-                                <details>
-                                    <summary class="ctDetails">Details</summary>
-                                    <div>CPU</div>
-                                    <div>GPU</div>
-                                    <div>MEM</div>
+                            <li class="ctListElem">
+                                <span class="ctListElemName">{{ct.name}}</span>
+                                <span class="ctListElemAppName">{{ ct.application.name }}</span>
+                                <span class="ctListElemStatus">CTStatus</span>
+                                <div class="ctListButtons">
+                                    <a href="/launcher/app-user/ctOverview/activate/{{ct.id}}"><button class="ctActivateBtn">Activate</button></a>
+                                    <a href="/launcher/app-user/ctOverview/pause/{{ct.id}}"><button class="ctPauseBtn">Pause</button></a>
+                                    <a href="/launcher/app-user/ctOverview/abort/{{ct.id}}"><button class="ctAbortBtn">Abort</button></a>
+                                    <button class="ctDetailsBtn" onclick="changeViewOfTasksDetails('CT{{ ct.id }}')">Details</button>
+                                </div>
+                            <div>
+                                <details id="CT{{ ct.id }}" class="details" onload="hideOnLoad('CT{{ ct.id }}')">
+                                        <summary></summary>
+                                        <div>CPU</div>
+                                        <div>GPU</div>
+                                        <div>MEM</div>
                                 </details>
-                                </div></li>
+                            </div>
+                            </li>
                         {% endfor %}
                     </ul>
                 </div>
