ID added to details.

--- a/launcher/src/templates/cockpit.html
+++ b/launcher/src/templates/cockpit.html
@@ -68,7 +68,7 @@
                             <div>
                                 <details id="CT{{ ct.id }}" class="details" onload="hideOnLoad('CT{{ ct.id }}')">
                                         <summary></summary>
-										<div>id</div>
+										 <div>id<section>{{ ct.id }}</section></div>
                                         <div>CPU</div>
                                         <div>GPU</div>
                                         <div>MEM</div>
