--- a/launcher/src/templates/login.html
+++ b/launcher/src/templates/login.html
@@ -19,11 +19,11 @@
         </header>
 				<div id="loginFormContainer">
 						<form method="POST" action="/signIn" novalidate>
-							<label for="login">Nazwa użytkownika</label><br />
-							<input type="text" id="login" name="login" placeholder="Nazwa użytkownika..."><br />
-							<label for="password">Hasło</label><br />
-							<input type="password" id="password" name="password" placeholder="Hasło..."><br />
-							<input type="submit" value="Zaloguj się">
+							<label for="login">Username</label><br />
+							<input type="text" id="login" name="login" placeholder="Username..."><br />
+							<label for="password">Password</label><br />
+							<input type="password" id="password" name="password" placeholder="Password..."><br />
+							<input type="submit" value="Sign in">
 						</form>
 				</div>  
     </body>
