Very basic sign in feature added

--- a/launcher/src/templates/cockpit.html
+++ b/launcher/src/templates/cockpit.html
@@ -14,7 +14,7 @@
         <div id="container">
             <header>
                 <div id="headContainer">
-                    <h3 id="userName">Logged in as: user01</h3>
+                    <h3 id="userName">Logged in as: {{userName}}</h3>
                         <nav>
                             <ul>
                                 <li><a href="/logout">Logout</a></li>
