--- a/launcher/src/templates/inputForm.html
+++ b/launcher/src/templates/inputForm.html
@@ -9,7 +9,7 @@
 	<body>
         <header>
             <div id="headContainer">
-                <h3 id="userName">Logged in as: user01</h3>
+                <h3 id="userName">Logged in as: {{userName}}</h3>
                     <nav>
                         <ul>
                             <li><a href="/logout">Logout</a></li>
