--- a/launcher/src/templates/cockpit.html
+++ b/launcher/src/templates/cockpit.html
@@ -58,7 +58,7 @@
                             <li class="ctListElem">
                                 <span class="ctListElemName">{{ct.name}}</span>
                                 <span class="ctListElemAppName">{{ ct.application.name }}</span>
-                                <span class="ctListElemStatus">CTStatus</span>
+                                <span class="ctListElemStatus">{{ct.status}}</span>
                                 <div class="ctListButtons">
                                     <a href="/launcher/app-user/ctOverview/activate/{{ct.id}}"><button class="ctActivateBtn">Activate</button></a>
                                     <a href="/launcher/app-user/ctOverview/pause/{{ct.id}}"><button class="ctPauseBtn">Pause</button></a>
