--- a/launcher/src/templates/cockpit.html
+++ b/launcher/src/templates/cockpit.html
@@ -3,6 +3,7 @@
 <html lang="pl-PL">
 <head>
 <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" type="text/css"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- <link rel="stylesheet" href="../static/main.css" type="text/css"/> -->
     <script src="{{ url_for('static', filename='cockpit.js') }}" type="text/javascript"></script>
 <meta charset="utf-8" />
@@ -59,6 +60,7 @@
                                 <span class="ctListElemName">{{ct.name}}</span>
                                 <span class="ctListElemAppName">{{ ct.application.name }}</span>
                                 <span class="ctListElemStatus">{{ct.status}}</span>
+                                <span><button value="Refresh"><i class="fa fa-refresh"></i></button></span>
                                 <div class="ctListButtons">
                                     <a href="/launcher/app-user/ctOverview/activate/{{ct.id}}"><button class="ctActivateBtn">Activate</button></a>
                                     <a href="/launcher/app-user/ctOverview/pause/{{ct.id}}"><button class="ctPauseBtn">Pause</button></a>
