--- a/launcher/src/templates/cockpit.html
+++ b/launcher/src/templates/cockpit.html
@@ -59,8 +59,8 @@
                             <li class="ctListElem">
                                 <span class="ctListElemName">{{ct.name}}</span>
                                 <span class="ctListElemAppName">{{ ct.application.name }}</span>
-                                <span class="ctListElemStatus">{{ct.status}}</span>
-                                <span><button value="Refresh"><i class="fa fa-refresh"></i></button></span>
+                                <span id="statusText_{{ct.id}}" class="ctListElemStatus">{{ct.status}}</span>
+                                <span><button onclick="getTaskStatus('{{ct.id}}')" value="Refresh"><i class="fa fa-refresh"></i></button></span>
                                 <div class="ctListButtons">
                                     <a href="/launcher/app-user/ctOverview/activate/{{ct.id}}"><button class="ctActivateBtn">Activate</button></a>
                                     <a href="/launcher/app-user/ctOverview/pause/{{ct.id}}"><button class="ctPauseBtn">Pause</button></a>
@@ -95,7 +95,6 @@
                     </ul>
                 </div>
             </div>
-
 
         </div>
 
