JS, cockpit and endpoint for getting all CT updated

--- a/launcher/src/templates/cockpit.html
+++ b/launcher/src/templates/cockpit.html
@@ -73,7 +73,7 @@
 										 <div>id {{ ct.id }}</div>
                                         <div>LOGGER: {{ ct.input.logger }}</div>
                                         <div>STATUS </div>
-                                        <span id="statusTextDetails_{{ct.id}}" class="ctListElemStatus">{{ct.status}}</span>
+                                        <span id="statusTextDetails_{{ct.mm_ct_id}}" class="ctListElemStatus">{{ct.status}}</span>
                                         <div>
                                             <label>LOGS</label>
                                                 <table>
